# snark

./: .gitmodules  CMakeLists.txt  README.md
depends/: CMakeLists.txt
depends/libff/: CMakeLists.txt
depends/libff/libff/: CMakeLists.txt
depends/libff/libff/algebra/curves/: curve_utils.tcc
depends/libff/libff/algebra/curves/alt_bn128/: alt_bn128_g1.hpp  (+2 more)
depends/libff/libff/algebra/exponentiation/: exponentiation.hpp  exponentiation.tcc
depends/libff/libff/algebra/fields/: bigint.hpp  fp.hpp  fp.tcc
depends/libff/libff/common/default_types/: ec_pp.hpp
depends/libfqfft/: CMakeLists.txt
depends/libfqfft/tutorials/: CMakeLists.txt  pn_eval.cpp  pn_m.cpp
libsnark/: CMakeLists.txt
libsnark/gadgetlib1/gadgets/verifiers/tests/: test_r1cs_ppzksnark_verifier_gadget.cpp
libsnark/gadgetlib2/: adapters.cpp  adapters.hpp  constraint.cpp  constraint.hpp  gadget.cpp  gadget.hpp  gadget_bitpacking.cpp  gadget_bitpacking.hpp  gadget_word.cpp  gadget_word.hpp  integration.cpp  protoboard.cpp  protoboard.hpp  variable.cpp  variable.hpp  variable_operators.hpp  variable_word.cpp  variable_word.hpp
libsnark/gadgetlib2/examples/: tutorial.cpp
libsnark/gadgetlib2/tests/: gadget_UTEST.cpp
libsnark/reductions/r1cs_to_qap/: r1cs_to_qap.hpp  r1cs_to_qap.tcc
libsnark/relations/: variable.hpp  variable.tcc  variable_linear_term.tcc
libsnark/relations/constraint_satisfaction_problems/r1cs/: r1cs.tcc
libsnark/zk_proof_systems/ppzksnark/r1cs_gg_ppzksnark/: r1cs_gg_ppzksnark.hpp
libsnark/zk_proof_systems/ppzksnark/r1cs_ppzksnark/: r1cs_ppzksnark.hpp  r1cs_ppzksnark.tcc
(+7 files in other folders)
